--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    compile 'com.android.support:cardview-v7:26.0.+'
+    compile 'com.android.support:recyclerview-v7:26.0.+'
     testCompile 'junit:junit:4.12'
 }
