--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".controls.LoginActivity">
+        android:theme="@style/CustomBaseTheme">
+        <activity android:name=".controls.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".controls.LoginActivity" />
         <activity android:name=".controls.MainActivity" />
         <activity android:name=".controls.ListaActivity" />
-        <activity android:name=".controls.DisciplinaActivity"></activity>
+        <activity android:name=".controls.DisciplinaActivity" />
+        <!--<activity android:name=".controls.SplashActivity"></activity>-->
     </application>
 
 </manifest>
